feat: Implement product review functionality with including rating calculation for products and add those on Swagger documentation.
